Feat: Complete File Upload, Dashboard UI, and Mobile Fixes

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,13 @@ BASE_URL=http://localhost:3000
 
 # For production, use your actual domain:
 # BASE_URL=https://yourdomain.com
+
+# Authentication
+# Generate a random secret for JWT signing
+JWT_SECRET=your_jwt_secret_here
+JWT_EXPIRES_IN=30d
+
+# Cloudinary (File Uploads)
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
