--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.9.0",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.10.1",
+    "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "qrcode": "^1.5.4",
     "uuid": "^9.0.0"
